fix bottom of words getting cut off

--- a/app/client/stylesheets/site.scss
+++ b/app/client/stylesheets/site.scss
@@ -129,9 +129,6 @@ input {
 .ui.pink.button{
     background: $orange !important;
 }
-.ui.form select {
-  height: 2.5em;
-}
 input{
     font-family: $font-body !important;
 }
